--- a/TDDCourse_IMP0047/HarryPotter.DataBase.Migrations/HarryPotter.DataBase.Migrations.csproj
+++ b/TDDCourse_IMP0047/HarryPotter.DataBase.Migrations/HarryPotter.DataBase.Migrations.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1F2950FC-44DC-4304-8183-9E2F999D8CA4}</ProjectGuid>
+    <ProjectGuid>{1EF852CD-E2EA-4F76-8D62-243115C35E45}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FizzBuzz.Tests</RootNamespace>
-    <AssemblyName>FizzBuzz.Tests</AssemblyName>
+    <RootNamespace>HarryPotter.DataBase.Migrations</RootNamespace>
+    <AssemblyName>HarryPotter.DataBase.Migrations</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,14 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NDbUnit.Core">
-      <HintPath>..\packages\NDbUnit.Core.1.6.8.0\lib\Net35\NDbUnit.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="NDbUnit.SqlClient">
-      <HintPath>..\packages\NDbUnit.SqlClient.1.6.8.0\lib\Net35\NDbUnit.SqlClient.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="FluentMigrator">
+      <HintPath>..\packages\FluentMigrator.1.1.1.0\lib\35\FluentMigrator.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,17 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FizzBuzzTests.cs" />
+    <Compile Include="M01_CreateAuthorsTable.cs" />
+    <Compile Include="M02_CreateBooksTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj">
-      <Project>{F2D6E886-145E-4396-8465-7F08F2BF6A2D}</Project>
-      <Name>FizzBuzz</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
