--- a/TDDCourse_IMP0047/HarryPotter.DataBase/HarryPotter.DataBase.csproj
+++ b/TDDCourse_IMP0047/HarryPotter.DataBase/HarryPotter.DataBase.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1F2950FC-44DC-4304-8183-9E2F999D8CA4}</ProjectGuid>
+    <ProjectGuid>{C5CE72F4-517F-4AA8-87CB-744F6B0851E6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FizzBuzz.Tests</RootNamespace>
-    <AssemblyName>FizzBuzz.Tests</AssemblyName>
+    <RootNamespace>HarryPotter.DataBase</RootNamespace>
+    <AssemblyName>HarryPotter.DataBase</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,16 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NDbUnit.Core">
-      <HintPath>..\packages\NDbUnit.Core.1.6.8.0\lib\Net35\NDbUnit.Core.dll</HintPath>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="ImproveIT.Data">
+      <HintPath>..\packages\ImproveIT.Data\ImproveIT.Data.dll</HintPath>
     </Reference>
     <Reference Include="NDbUnit.SqlClient">
       <HintPath>..\packages\NDbUnit.SqlClient.1.6.8.0\lib\Net35\NDbUnit.SqlClient.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,16 +53,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FizzBuzzTests.cs" />
+    <Compile Include="BooksMapper.cs" />
+    <Compile Include="DataContextBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AuthorsMapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj">
-      <Project>{F2D6E886-145E-4396-8465-7F08F2BF6A2D}</Project>
-      <Name>FizzBuzz</Name>
+    <ProjectReference Include="..\HarryPotter.Domain\HarryPotter.Domain.csproj">
+      <Project>{7AF629B6-A071-45F0-9551-F09A40EF62D4}</Project>
+      <Name>HarryPotter.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
